--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
   <body>
     <div id="twitchAvatarImgContainerId" class="twitch-avatar-img-container">
       <img
-        width="1920"
-        height="1080"
         id="twitchAvatarImgId"
         src=""
         alt=""
         class="twitch-avatar-img"
+        loading="lazy"
       />
     </div>
   </body>
